# Gazprom_project

./: .gitignore  DATA.dvc  README.md  pyproject.toml
.dvc/: config
notebooks/: final_demo.ipynb
src/my project/data/: cleaning_process.py  mirkvartir_parser.py  schema.py
src/my project/features/: constants.py
src/my project/models/: train.py
src/my project/models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/my project/models/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  time_left.tsv
src/my project/models/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/my project/models/catboost_info/fold-2/: catboost_training.json  learn_error.tsv  time_left.tsv
src/my project/models/catboost_info/fold-3/: catboost_training.json  time_left.tsv
src/my project/models/catboost_info/fold-4/: catboost_training.json  time_left.tsv
src/my project/models/catboost_info/learn/: events.out.tfevents
src/my project/models/catboost_info/test/: events.out.tfevents
src/my_project/data/: cleaning_process.py  mirkvartir_parser.py
src/my_project/features/: build_features.py  inspect data.py
src/my_project/models/: train.py
src/my_project/models/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/my_project/models/catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/my_project/models/catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
(+34 files in other folders)
