[project]
name = "gazprom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.96",
    "catboost>=1.2.10",
    "dvc>=3.67.1",
    "geopy>=2.4.1",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
